--- a/package.json
+++ b/package.json
@@ -38,4 +38,16 @@
     "@mercuryworkshop/libcurl-transport": "^1.5.0",
     "@mercuryworkshop/scramjet": "github:MercuryWorkshop/scramjet",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
-    "axios": "^
+    "axios": "^1.11.0",
+    "chii": "^1.15.5",
+    "fastify": "^5.5.0",
+    "pm2": "^6.0.8",
+    "puppeteer": "^24.17.0",
+    "wisp-server-node": "^1.1.7",
+    "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "@babel/node": "^7.28.0",
+    "esbuild": "^0.25.9"
+  }
+}
