--- a/package.json
+++ b/package.json
@@ -23,4 +23,31 @@
     "workflow-test": "node run-command.mjs workflow",
     "deployment": "pnpm install --frozen-lockfile && npm run build && node backend.js"
   },
-  "keywords
+  "keywords": [
+    "proxy",
+    "node.js",
+    "unblocker"
+  ],
+  "author": "Titanium Network",
+  "license": "GNU AFFERO",
+  "dependencies": {
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/static": "^8.2.0",
+    "@mercuryworkshop/bare-mux": "^2.1.7",
+    "@mercuryworkshop/epoxy-transport": "^2.1.28",
+    "@mercuryworkshop/libcurl-transport": "^1.5.0",
+    "@mercuryworkshop/scramjet": "https://github.com/MercuryWorkshop/scramjet/archive/2.0.0-alpha.tar.gz",
+    "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
+    "axios": "^1.11.0",
+    "chii": "^1.15.5",
+    "fastify": "^5.5.0",
+    "pm2": "^6.0.8",
+    "puppeteer": "^24.17.0",
+    "wisp-server-node": "^1.1.7",
+    "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "@babel/node": "^7.28.0",
+    "esbuild": "^0.25.9"
+  }
+}
