--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@mercuryworkshop/bare-mux": "^2.1.7",
     "@mercuryworkshop/epoxy-transport": "^2.1.28",
     "@mercuryworkshop/libcurl-transport": "^1.5.0",
-    "@mercuryworkshop/scramjet": "github:MercuryWorkshop/scramjet#2.0.0-alpha",
+    "@mercuryworkshop/scramjet": "github:MercuryWorkshop/scramjet",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
     "axios": "^1.11.0",
     "chii": "^1.15.5",
