--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
     "node": "20.x"
   },
   "scripts": {
-    "fresh-install": "npm cache verify && npm update && npm ci && cd lib/rammerhead && npm ci",
-    "fresh-start": "npm run fresh-install && npm start",
-    "start": "npm stop && npm run build && npm run manual-start",
+    "fresh-install": "pnpm install --frozen-lockfile && cd lib/rammerhead && pnpm install --frozen-lockfile",
+    "fresh-start": "pnpm run fresh-install && pnpm start",
+    "start": "pnpm stop && pnpm run build && pnpm run manual-start",
     "restart": "node run-command.mjs stop start",
     "stop": "node run-command.mjs stop",
-    "test": "npm run proxy-validator",
+    "test": "pnpm run proxy-validator",
     "manual-start": "node run-command.mjs start",
     "kill": "node run-command.mjs stop kill",
-    "build": "node run-command.mjs build && cd lib/rammerhead && npm run build",
+    "build": "node run-command.mjs build && cd lib/rammerhead && pnpm run build",
     "clear": "node run-command.mjs clean",
     "clean": "node run-command.mjs clean format",
     "proxy-validator": "node proxyServiceValidator.js",
     "workflow-test": "node run-command.mjs workflow",
-    "deployment": "npm install --force && npm run build && node backend.js"
+    "deployment": "pnpm install --force && pnpm run build && node backend.js"
   },
-  "keywords": ["proxy", "node.js", "unblocker"],
+  "keywords": [
+    "proxy",
+    "node.js",
+    "unblocker"
+  ],
   "author": "Titanium Network",
   "license": "GNU AFFERO",
   "dependencies": {
@@ -32,7 +36,7 @@
     "@mercuryworkshop/bare-mux": "^2.1.7",
     "@mercuryworkshop/epoxy-transport": "^2.1.28",
     "@mercuryworkshop/libcurl-transport": "^1.5.0",
-    "@mercuryworkshop/scramjet": "github:MercuryWorkshop/scramjet",
+    "@mercuryworkshop/scramjet": "https://github.com/MercuryWorkshop/scramjet/releases/download/latest/mercuryworkshop-scramjet-2.0.0-alpha.tgz",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
     "axios": "^1.11.0",
     "chii": "^1.15.5",
