--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend.js",
+      "src": "package.json",
       "use": "@vercel/node"
-    }
-  ],
-  "installCommand": "pnpm install",
-  "buildCommand": "pnpm run build",
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/backend.js"
     }
   ]
 }
