--- a/package.json
+++ b/package.json
@@ -1,26 +1,53 @@
 {
   "name": "holyunblocker",
-  "version": "1.0.0",
-  "description": "Unblocker project",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js"
+  "version": "6.9.2",
+  "repository": "https://github.com/QuiteAFancyEmerald/Holy-Unblocker",
+  "description": "Holy Unblocker LTS is a web proxy service that helps you access websites that may be blocked by your network, government or policy all within your browser with no download or setup.",
+  "main": "backend.js",
+  "engines": {
+    "node": "20.x"
   },
+  "scripts": {
+    "fresh-install": "npm cache verify && npm update && npm ci && cd lib/rammerhead && npm ci",
+    "fresh-start": "npm run fresh-install && npm start",
+    "start": "npm stop && npm run build && npm run manual-start",
+    "restart": "node run-command.mjs stop start",
+    "stop": "node run-command.mjs stop",
+    "test": "npm run proxy-validator",
+    "manual-start": "node run-command.mjs start",
+    "kill": "node run-command.mjs stop kill",
+    "build": "node run-command.mjs build && cd lib/rammerhead && npm run build",
+    "clear": "node run-command.mjs clean",
+    "clean": "node run-command.mjs clean format",
+    "proxy-validator": "node proxyServiceValidator.js",
+    "workflow-test": "node run-command.mjs workflow",
+    "deployment": "npm install && npm run build && node backend.js"
+  },
+  "keywords": [
+    "proxy",
+    "node.js",
+    "unblocker"
+  ],
+  "author": "Titanium Network",
+  "license": "GNU AFFERO",
   "dependencies": {
-    "@mercuryworkshop/scramjet": "file:lib/scramjet-2.0.0-alpha.tgz",
-    "axios": "^1.6.0",
-    "fastify": "^4.27.1",
-    "ws": "^8.19.0",
-    "puppeteer": "^21.0.1",
-    "pm2": "^5.3.0"
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/static": "^8.2.0",
+    "@mercuryworkshop/bare-mux": "^2.1.7",
+    "@mercuryworkshop/epoxy-transport": "^2.1.28",
+    "@mercuryworkshop/libcurl-transport": "^1.5.0",
+    "@mercuryworkshop/scramjet": "https://github.com/MercuryWorkshop/scramjet/releases/download/latest/mercuryworkshop-scramjet-2.0.0-alpha.tgz",
+    "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
+    "axios": "^1.11.0",
+    "chii": "^1.15.5",
+    "fastify": "^5.5.0",
+    "pm2": "^6.0.8",
+    "puppeteer": "^24.17.0",
+    "wisp-server-node": "^1.1.7",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@8hobbies/typedoc-plugin-404": "^3.2.1",
-    "@giancosta86/typedoc-readonly": "^1.0.1",
-    "typedoc": "^0.27.9"
-  },
-  "engines": {
-    "node": ">=20.0.0"
+    "@babel/node": "^7.28.0",
+    "esbuild": "^0.25.9"
   }
 }
