--- a/.npmrc
+++ b/.npmrc
@@ -1,12 +1,2 @@
-# Use the latest npm registry
-registry=https://registry.npmjs.org/
-
-# Allow installing from GitHub URLs and tarballs
-strict-ssl=false
-prefer-online=true
-
-# Ignore scripts that enforce pnpm
-ignore-scripts=false
-
-# Optional: speed up installs
-fetch-retries=3
+-package-lock=false
+-shamefully-hoist=true
